Fix vertical alignment of hangers in Hangers.css

--- a/src/components/common/Hangers.css
+++ b/src/components/common/Hangers.css
@@ -29,7 +29,7 @@
 .RightLineStyle {
   position: fixed;
   top: 0;
-  bottom: 50%;
+  bottom: 0;
   right: 32px; /* adjust as needed */
   width: 3px; /* adjust as needed */
   background: #22262e; /* adjust color as needed */
@@ -56,7 +56,7 @@
 
 .LeftLineStyle {
   position: fixed;
-  top: 50%;
+  top: 0;
   bottom: 0;
   left: 27px; /* adjust as needed */
   width: 3px; /* adjust as needed */
